Start elasticsearch with sbt